python/test-data/testWrongNumOfArguments.py
def foo(x: int, y: float) -> float:
    return x + y

foo(1)
